# rusted-experiments

./: README.md
branches/: Cargo.toml
branches/src/: main.rs
christmas_days/: Cargo.toml
christmas_days/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
hr_cloud_thing/: Cargo.toml
hr_cloud_thing/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
r_codes_p6mueo/: Cargo.toml
r_codes_p6mueo/src/: main.rs
random-stuff/: Cargo.toml  index.html
random-stuff/src/: lib.rs
slices/src/: main.rs
temperature/: Cargo.toml
temperature/src/: main.rs
variables/: Cargo.toml
